# rust-clean-architecture

./: .env.example  .gitignore  Cargo.toml  docker-compose.yml
src/: lib.rs  main.rs
src/api/: router.rs
src/entities/: todo.rs
src/infrastructure/surreal/: mod.rs  surreal_context.rs  todo_repository.rs
src/usecases/todo/commands/: create_todo_command.rs  delete_todo_command.rs  mod.rs  update_todo_command.rs
src/usecases/todo/queries/: get_all_todos_query.rs  get_todo_by_id_query.rs
