[package]
name = "clean-architecture"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
surrealdb = { version = "2.1.4", features = ["kv-mem"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
once_cell = "1.20.2"
dotenv = "0.15.0"
